objects/CMPL123QMS__Approved_Material__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Manufacturer_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Manufacturer Site</label>
        <referenceTo>CMPL123QMS__Customer_Site__c</referenceTo>
        <relationshipLabel>Approved Materials</relationshipLabel>
        <relationshipName>Approved_Materials</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Risk_Flag__c</fullName>
        <formula>IF(ISPICKVAL( CMPL123QMS__Material__r.CMPL123QMS__Overall_Material_Risk__c , 'High'),IMAGE("/img/func_icons/util/alert16.gif", "warning", 16, 16), "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A warning flag indicates a high Material Risk is associated with this Approved Material.</inlineHelpText>
        <label>Material Risk Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Material</label>
        <referenceTo>CMPL123QMS__Material__c</referenceTo>
        <relationshipLabel>Approved Manufacturer Sites</relationshipLabel>
        <relationshipName>Approved_Materials</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Overall_Material_Risk_Details__c</fullName>
        <formula>CMPL123QMS__Material__r.CMPL123QMS__Overall_Material_Risk_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Material Risk Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Overall_Material_Risk__c</fullName>
        <formula>TEXT(CMPL123QMS__Material__r.CMPL123QMS__Overall_Material_Risk__c)</formula>
        <label>Overall Material Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Supplier_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier Site</label>
        <referenceTo>CMPL123QMS__Supplier_Site__c</referenceTo>
        <relationshipLabel>Approved Materials</relationshipLabel>
        <relationshipName>Approved_Materials</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Approved Material</label>
    <nameField>
        <label>Approved Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>